--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
             <div>
                 <br>
                 <picture>
+                    <source media="(max-width:250px )" srcset="imagens/jobs2150.jpg" type="image/">
                     <source media="(max-width:650px )" srcset="imagens/jobs2300.jpg" type="image/jpg">
                     <img src="imagens/jobs2.jpg" alt="Steve Jobs">
                 </picture>
             </div>
         </p>
            <p>
-               Jobs vê a embalgem como uma ajuda para apresentar uma tecnologia nova e desconhecida aos consumidores. Por exemplo,
+               Jobs vê a embalagem como uma ajuda para apresentar uma tecnologia nova e desconhecida aos consumidores. Por exemplo,
                        vamos pensar no <strong>Mac original</strong>, lançado em 1984. Na aquela época, ninguém jamais havia visto algo semelhante. Era controlado por aquela coisa estranha que apontava
                        - <i>um mouse</i> - e não por um teclado, como os PCs que existiam até então. Para familiarizar os novos usuários com o mouse, Jobs faz questão de que ele fosse embalado separadamente, em um compartimento própio. O fato de forçar os usuários a desempacotar o mouse - a pegá-lo e conectá-lo - iria torná-lo um pouco menos estranho quando tivessem que usá-lo pela primeira vez. Até hoje, Jobs vem planejando cuidadosamente essa "rotina de desempacotamento" para cada um dos produtos 
                        da Apple. A embalagem do iMac foi projetada para tornar óbvio como conectar a máquina à internet, e recebeu uma inserção de poliestireno especialmente desenhada para
@@ -60,6 +61,7 @@
            <p>
             <div>
                 <picture>
+                    <source media="(max-width: 250px)" srcset="imagens/jobs1150.jpg" type="image/jpg">
                     <source media="(max-width:850px )" srcset="imagens/jobs1300.jpg" type="image/jpg">
                    <img src="imagens/jobs1800.jpg" alt="Steve Jobs">
                 </picture>
