teste de imagem

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
            <p>
             <div>
                 <picture>
-                    <source media="(max-width: 250px)" srcset="imagens/jobs1150.jpg" type="image/jpg">
-                    <source media="(max-width:850px )" srcset="imagens/jobs1300.jpg" type="image/jpg">
-                   <img src="imagens/jobs1800.jpg" alt="Steve Jobs">
+                    <img src="imagens/jobs1300.jpg" alt="Steve jobs">
                 </picture>
             </div>
             <br>
