--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div>
                 <br>
                 <picture>
+                    <source media="(min-width:300px )" srcset="imagens/jobs2.jpg" type="image/jpg">
                     <img src="imagens/jobs2300.jpg" alt="Steve Jobs">
                 </picture>
             </div>
@@ -59,6 +60,7 @@
            <p>
             <div>
                 <picture>
+                    <source media="(min-width: 800px)" srcset="imagens/jobs1800.jpg" type="image/jpg">
                     <img src="imagens/jobs1300.jpg" alt="Steve jobs">
                 </picture>
             </div>
